# Rapster

./: .gitignore  BBHevol.py  BBHevol2.py  CHANGELOG.md  Exchanges.py  Exchanges2.py  MzamsMrem_F12d.txt  Planck18_lookup_table.npz  README.md  ThreeBodyBinary2.py  TwoBodyCapture2.py  binary_evolution.py  constants2.py  evolve_new.in  exchanges.py  functions.py  functions2.py  pyproject.toml  rapster.py  rapster2.py  requirements.txt  setup.py  three_body_binary.py  triples.py  triples2.py  two_body_capture.py
Data/: .marginally_bound.py  APR.txt  AU.txt  x_mb_vec.pkl
Data/MzamsMrem/: MCO10.npz  MCO11.npz  MCO12.npz  MCO2.npz  MCO3.npz  MCO4.npz  MCO6.npz  MCO7.npz  (+27 more)
Example/: hardening_TEST.txt  tutorial.ipynb
MzamsMrem/: MCO1.npz  MCO10.npz  MCO11.npz  MCO12.npz  MCO2.npz  MCO3.npz  MCO4.npz  MCO5.npz  MCO6.npz  MCO7.npz  MCO8.npz  MCO9.npz  MzamsMrem1.npz  MzamsMrem10.npz  MzamsMrem10_delayed.npz  MzamsMrem1_delayed.npz  MzamsMrem3.npz  MzamsMrem3_rapid.npz  MzamsMrem4_rapid.npz  MzamsMrem5_rapid.npz  MzamsMrem7_delayed.npz  MzamsMrem7_rapid.npz  MzamsMrem9.npz  MzamsMrem9_delayed.npz  MzamsMrem_F12r.txt
Testing/: blackholes_TEST.npz  evolution_TEST.txt  mergers_TEST.txt
Testing2/: evolution_TEST.txt  hardening_TEST.txt  mergers_TEST.txt  output_BHs_TEST.npz
rapster/: __init__.py  analyze_cluster.py  binary_evolution.py  cluster_evolution.py  compact_accretion.py  constants.py  exchanges.py  functions.py  plot_cluster.py  rapster.py  remnant.py  run_cluster.py  stellar_evolution.py  three_body_binary.py  tidal_disruptions.py  triples.py  two_body_capture.py
(+5 files in other folders)
