[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rapster"
version = "2.9.0"
description = "Rapid population synthesis package for compact object coalescences and tidal disruptions in dense star clusters."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "scipy==1.11.4",
    "pandas==2.1.3",
    "matplotlib",
    "jupyterlab",
    "ipykernel",
    "astropy"
]

[tool.setuptools]
packages = ["rapster"]

